syntax = "proto3";
import "google/protobuf/struct.proto";
//import "google/protobuf/timestamp.proto";
package instance;

option go_package = "./proto;instance";

service Books{
  rpc Lists(ListsRequest) returns (ListsResponse) {};

}



message ListsRequest{
  repeated string appIds = 1;
  int32 pos = 2;
  string court_id = 3;
  string   begin_at = 4;
  string   end_at = 5;
  int32 page = 6;
  string goal_type = 7;
  int32 per_page = 8;
  string user_id = 9;
  repeated string cids = 11;
  string order_by = 12;
}

message Book{
  string name = 2;
  string type = 4;
  string appid = 7;
  uint32 id = 11;
  repeated int32 pos = 13;
  string image = 15;
}


message ListsResponse{
  int32 code = 1;
  string msg = 2;

  repeated google.protobuf.Struct records = 3;
  int32 total = 4;
  repeated Book Lists = 5;
}